# git-review

./: .gitattributes  CLAUDE.md  Cargo.toml  HORIZONTAL_SCROLL_PLAN.md  PLAN.md  README.md  release.sh  rustfmt.toml  test-screenshot.tape
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
.serena/: project.yml
docs/: SCREENSHOTS.md  index.html  usage.html
docs/screenshots/: README.md
scripts/: capture-screenshots.sh
src/: app.rs  comments.rs  config.rs  export.rs  input.rs  lib.rs  main.rs  syntax.rs
src/app/: comments.rs  diff.rs  mod.rs  navigation.rs  search.rs  view.rs
src/git/: branch.rs  commits.rs  diff.rs  diff_parser.rs  mod.rs  notes.rs
src/ui/: comment_dialog.rs  comment_indicator.rs  diff_view.rs  footer.rs  header.rs  help_dialog.rs  hunk_expander.rs  layout.rs  log_pane.rs  mod.rs  search_prompt.rs  side_by_side.rs  theme.rs
tests/: integration_tests.rs
