[package]
name = "git-review"
version = "1.0.0"
edition = "2021"
description = "Terminal-based code review tool for git branches with GitHub-inspired diff UI"
license = "MIT"
authors = ["Andrew Leech <andrew@alelec.net>"]
repository = "https://github.com/andrewleech/git-review"
homepage = "https://github.com/andrewleech/git-review"
documentation = "https://github.com/andrewleech/git-review"
readme = "README.md"
keywords = ["git", "code-review", "diff", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.82"

[[bin]]
name = "git-review"
path = "src/main.rs"

[lib]
name = "git_review"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
git2 = "0.20.2"
syntect = "5.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.7"
anyhow = "1.0.99"
clap = { version = "4.4", features = ["derive", "color", "help", "usage", "error-context"] }
dirs = "5.0"
once_cell = "1.20"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
